// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechnologiesAndTools slice should render correctly technologies with data 1`] = `
<div>
  <section
    class="technologies-slice"
  >
    <div
      class="container aos-init aos-animate"
      data-aos="fade-up"
      data-testid="container"
    >
      <h2
        class="technologies-slice__title"
        data-testid="technologies-slice__title"
      >
        
      TechnologiesAndTools title
    
      </h2>
       
      <div
        class="technologies-slice__categories technologies-slice__categories--"
      >
        <div
          class="technologies-slice__category technologies-slice__category--devops"
          data-testid="technologies-slice__category"
        >
          
        DevOps
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--qa"
          data-testid="technologies-slice__category"
        >
          
        QA
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--backend"
          data-testid="technologies-slice__category"
        >
          
        Backend
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--frontend"
          data-testid="technologies-slice__category"
        >
          
        Frontend
      
        </div>
      </div>
       
      <div
        class="technologies-slice__grid technologies-slice__grid--"
      >
        <div
          class="technologies-slice__technology devops-ansible devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Ansible"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Ansible
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-terraform devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Terraform"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Terraform
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-cloud-formation devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudFormation"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudFormation
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`TechnologiesAndTools slice should render correctly the title without data 1`] = `
<div>
  <section
    class="technologies-slice"
  >
    <div
      class="container"
      data-testid="container"
    >
      <h2
        class="technologies-slice__title"
        data-testid="technologies-slice__title"
      >
        
      Technologies & Tools
    
      </h2>
       
      <div
        class="technologies-slice__categories technologies-slice__categories--"
      >
        <div
          class="technologies-slice__category technologies-slice__category--devops"
          data-testid="technologies-slice__category"
        >
          
        DevOps
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--qa"
          data-testid="technologies-slice__category"
        >
          
        QA
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--backend"
          data-testid="technologies-slice__category"
        >
          
        Backend
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--frontend"
          data-testid="technologies-slice__category"
        >
          
        Frontend
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--mobile"
          data-testid="technologies-slice__category"
        >
          
        Mobile
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--pm"
          data-testid="technologies-slice__category"
        >
          
        PM
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--infrastructure"
          data-testid="technologies-slice__category"
        >
          
        Infrastructure
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--uiux"
          data-testid="technologies-slice__category"
        >
          
        UI/UX
      
        </div>
      </div>
       
      <div
        class="technologies-slice__grid technologies-slice__grid--"
      >
        <div
          class="technologies-slice__technology devops-ansible devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Ansible"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Ansible
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-terraform devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Terraform"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Terraform
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-cloud-formation devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudFormation"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudFormation
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-jenkins devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jenkins"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jenkins
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-bamboo devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Bamboo"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Bamboo
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-gitlab devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="GitlabCI"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            GitlabCI
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-travis-ci devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="TravisCI"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            TravisCI
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-elastic devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="ELK"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            ELK
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-circle-ci devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CircleCI"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CircleCI
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-sentry devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Sentry"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Sentry
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-cloud-watch devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudWatch"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudWatch
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-prometheus devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Prometheus"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Prometheus
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-aws infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="AWS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            AWS
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-gcp infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="GCP"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            GCP
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-digital-ocean infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Digital Ocean"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Digital Ocean
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-azure infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Azure"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Azure
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-cloud-native infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudNative"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudNative
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-heroku infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Heroku"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Heroku
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-netlify infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Netlify"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Netlify
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-cloudflare infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudFlare"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudFlare
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-kotlin mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Kotlin"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Kotlin
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-java mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Java"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Java
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-obj-c mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Objective-C"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Objective-C
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-swift mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Swift"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Swift
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-apple mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="IOS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            IOS
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-android mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Android"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Android
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-jira pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jira"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jira
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-slack pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Slack"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Slack
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-meet pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Meet"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Meet
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-zoom pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Zoom"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Zoom
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-miro pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Miro"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Miro
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-trello pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Trello"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Trello
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-loom pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Loom"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Loom
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-jira-assistant pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jira Assistant"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jira Assistant
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-service-desk pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Service Desk"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Service Desk
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-basecamp pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Basecamp"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Basecamp
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-notion pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Notion"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Notion
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-zapier pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Zapier"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Zapier
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-python backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Python"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Python
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-go backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Go"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Go
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-node backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Node.js"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Node.js
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-js backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="JavaScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            JavaScript
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-typescript backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="TypeScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            TypeScript
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-php backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="PHP"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            PHP
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-ruby backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Ruby"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Ruby
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-c backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="C"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            C
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-c-plus backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="C++"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            C++
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-figma uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Figma"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Figma
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-adobe uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Adobe Suite"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Adobe Suite
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-sketch uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Sketch"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Sketch
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-invision uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="InVision"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            InVision
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-zeplin uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Zeplin"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Zeplin
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-balsamic uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Balsamic"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Balsamic
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-principle-app uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Principle"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Principle
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-post-css frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="PostCSS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            PostCSS
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-typescript frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="TypeScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            TypeScript
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-angular frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Angular"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Angular
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-webpack frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Webpack"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Webpack
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-next frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Next.js"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Next.js
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-nuxt frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Nuxt.js"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Nuxt.js
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-js frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="JavaScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            JavaScript
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-react frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="React"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            React
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-babel frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Babel"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Babel
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-vue frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Vue"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Vue
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-sass frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="SASS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            SASS
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-jasmine qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jasmine"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jasmine
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-selenoid qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Selenoid"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Selenoid
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-appium qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Appium"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Appium
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-cucumber qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Cucumber"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Cucumber
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-pytest qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="PyTest"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            PyTest
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-selenium qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Selenium"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Selenium
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-selenium-grid qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Selenium Grid"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Selenium Grid
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`TechnologiesAndTools slice should render the title correctly with data 1`] = `
<div>
  <section
    class="technologies-slice"
  >
    <div
      class="container aos-init aos-animate"
      data-aos="fade-up"
      data-testid="container"
    >
      <h2
        class="technologies-slice__title"
        data-testid="technologies-slice__title"
      >
        
      TechnologiesAndTools title
    
      </h2>
       
      <div
        class="technologies-slice__categories technologies-slice__categories--"
      >
        <div
          class="technologies-slice__category technologies-slice__category--devops"
          data-testid="technologies-slice__category"
        >
          
        DevOps
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--qa"
          data-testid="technologies-slice__category"
        >
          
        QA
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--backend"
          data-testid="technologies-slice__category"
        >
          
        Backend
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--frontend"
          data-testid="technologies-slice__category"
        >
          
        Frontend
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--mobile"
          data-testid="technologies-slice__category"
        >
          
        Mobile
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--pm"
          data-testid="technologies-slice__category"
        >
          
        PM
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--infrastructure"
          data-testid="technologies-slice__category"
        >
          
        Infrastructure
      
        </div>
        <div
          class="technologies-slice__category technologies-slice__category--uiux"
          data-testid="technologies-slice__category"
        >
          
        UI/UX
      
        </div>
      </div>
       
      <div
        class="technologies-slice__grid technologies-slice__grid--"
      >
        <div
          class="technologies-slice__technology devops-ansible devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Ansible"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Ansible
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-terraform devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Terraform"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Terraform
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-cloud-formation devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudFormation"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudFormation
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-jenkins devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jenkins"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jenkins
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-bamboo devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Bamboo"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Bamboo
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-gitlab devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="GitlabCI"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            GitlabCI
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-travis-ci devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="TravisCI"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            TravisCI
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-elastic devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="ELK"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            ELK
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-circle-ci devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CircleCI"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CircleCI
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-sentry devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Sentry"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Sentry
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-cloud-watch devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudWatch"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudWatch
          </span>
        </div>
        <div
          class="technologies-slice__technology devops-prometheus devops"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Prometheus"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Prometheus
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-aws infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="AWS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            AWS
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-gcp infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="GCP"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            GCP
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-digital-ocean infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Digital Ocean"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Digital Ocean
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-azure infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Azure"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Azure
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-cloud-native infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudNative"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudNative
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-heroku infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Heroku"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Heroku
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-netlify infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Netlify"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Netlify
          </span>
        </div>
        <div
          class="technologies-slice__technology infrastructure-cloudflare infrastructure"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="CloudFlare"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            CloudFlare
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-kotlin mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Kotlin"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Kotlin
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-java mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Java"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Java
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-obj-c mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Objective-C"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Objective-C
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-swift mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Swift"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Swift
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-apple mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="IOS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            IOS
          </span>
        </div>
        <div
          class="technologies-slice__technology mobile-android mobile"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Android"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Android
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-jira pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jira"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jira
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-slack pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Slack"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Slack
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-meet pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Meet"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Meet
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-zoom pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Zoom"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Zoom
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-miro pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Miro"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Miro
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-trello pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Trello"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Trello
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-loom pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Loom"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Loom
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-jira-assistant pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jira Assistant"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jira Assistant
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-service-desk pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Service Desk"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Service Desk
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-basecamp pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Basecamp"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Basecamp
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-notion pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Notion"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Notion
          </span>
        </div>
        <div
          class="technologies-slice__technology pm-zapier pm"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Zapier"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Zapier
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-python backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Python"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Python
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-go backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Go"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Go
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-node backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Node.js"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Node.js
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-js backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="JavaScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            JavaScript
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-typescript backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="TypeScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            TypeScript
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-php backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="PHP"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            PHP
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-ruby backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Ruby"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Ruby
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-c backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="C"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            C
          </span>
        </div>
        <div
          class="technologies-slice__technology backend-c-plus backend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="C++"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            C++
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-figma uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Figma"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Figma
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-adobe uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Adobe Suite"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Adobe Suite
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-sketch uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Sketch"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Sketch
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-invision uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="InVision"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            InVision
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-zeplin uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Zeplin"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Zeplin
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-balsamic uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Balsamic"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Balsamic
          </span>
        </div>
        <div
          class="technologies-slice__technology uiux-principle-app uiux"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Principle"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Principle
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-post-css frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="PostCSS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            PostCSS
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-typescript frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="TypeScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            TypeScript
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-angular frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Angular"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Angular
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-webpack frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Webpack"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Webpack
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-next frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Next.js"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Next.js
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-nuxt frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Nuxt.js"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Nuxt.js
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-js frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="JavaScript"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            JavaScript
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-react frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="React"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            React
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-babel frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Babel"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Babel
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-vue frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Vue"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Vue
          </span>
        </div>
        <div
          class="technologies-slice__technology frontend-sass frontend"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="SASS"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            SASS
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-jasmine qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Jasmine"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Jasmine
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-selenoid qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Selenoid"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Selenoid
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-appium qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Appium"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Appium
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-cucumber qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Cucumber"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Cucumber
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-pytest qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="PyTest"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            PyTest
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-selenium qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Selenium"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Selenium
          </span>
        </div>
        <div
          class="technologies-slice__technology qa-selenium-grid qa"
          data-testid="technologies-slice__technology"
        >
          <img
            alt="Selenium Grid"
            data-src="[object Object]"
            height="26"
            width="26"
          />
           
          <span>
            Selenium Grid
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;
